--- a/CUDA_Tutorial_01.ipynb
+++ b/CUDA_Tutorial_01.ipynb
@@ -6,7 +6,7 @@
       "name": "CUDA_Tutorial_01.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMVXkV8Jig600RPdNkYgoIe",
+      "authorship_tag": "ABX9TyOvfx+rCHXe/TSvIDvhGl1Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,7 +15,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -31,7 +32,91 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3h__1V5uXR-t"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3h__1V5uXR-t",
+        "outputId": "6f5fb34a-9861-40fe-81d4-980853febcc8"
+      },
+      "source": [
+        "# add nvcc support for jupyter\n",
+        "!pip install git+git://github.com/depctg/nvcc4jupyter.git\n",
+        "%load_ext nvcc_plugins\n",
+        "\n",
+        "!nvcc --version"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting git+git://github.com/depctg/nvcc4jupyter.git\n",
+            "  Cloning git://github.com/depctg/nvcc4jupyter.git to /tmp/pip-req-build-1puh3nef\n",
+            "  Running command git clone -q git://github.com/depctg/nvcc4jupyter.git /tmp/pip-req-build-1puh3nef\n",
+            "Building wheels for collected packages: NVCCPlugin\n",
+            "  Building wheel for NVCCPlugin (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for NVCCPlugin: filename=NVCCPlugin-0.0.2-cp37-none-any.whl size=4334 sha256=99eb052f464af3804ded3f9a4a2a9c6c623206a8d8330a967d61cae1aab1b708\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-5tibf_xb/wheels/1e/43/2d/099cad2b9b02dfa88573f50a22735d8a0b2ba69bf82167b81c\n",
+            "Successfully built NVCCPlugin\n",
+            "Installing collected packages: NVCCPlugin\n",
+            "Successfully installed NVCCPlugin-0.0.2\n",
+            "Default out bin result.out\n",
+            "nvcc: NVIDIA (R) Cuda compiler driver\n",
+            "Copyright (c) 2005-2020 NVIDIA Corporation\n",
+            "Built on Wed_Jul_22_19:09:09_PDT_2020\n",
+            "Cuda compilation tools, release 11.0, V11.0.221\n",
+            "Build cuda_11.0_bu.TC445_37.28845127_0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "Nhc7ZrUDYwYc",
+        "outputId": "df7d4428-9705-46f5-93bc-6ef17f863c8c"
+      },
+      "source": [
+        "%%cu\n",
+        "#include <stdio.h>\n",
+        "__global__ void cuda_hello(){\n",
+        "  printf(\"Hello World from GPU!\\n\");\n",
+        "}\n",
+        "\n",
+        "int main(){\n",
+        "  cuda_hello<<<1,1>>>();\n",
+        "  cudaDeviceSynchronize();\n",
+        "  return 0;\n",
+        "}"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "''"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4J5EsiZDY2LM"
       },
       "source": [
         ""
